examples/should-fail/f09_duplicate_definition.lean
def demo_duplicate_definition : Type :=
  Prop

def demo_duplicate_definition : Type :=
  Prop
